<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:padding="@dimen/large">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_news"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        app:shapeAppearance="@style/CornerRound"
        tools:src="@drawable/ic_broken_image"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="2"
        tools:text="@string/news_title"
        android:layout_marginVertical="@dimen/normal"
        android:layout_weight="2"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/normal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/news_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/news_publisher"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/normal"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/news_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="@string/news_date"
            android:textSize="16sp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_unfavorite"
            android:layout_marginEnd="@dimen/normal"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:layout_marginEnd="@dimen/normal"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>