<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large"
    tools:context=".presentation.favorite.view.FavoriteFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:shapeAppearance="@style/circle"
        android:src="@drawable/profile"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/xx_large"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/x_large"
        android:textAlignment="center"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/normal"
        tools:text="John Doe"
        android:textSize="16sp"
        android:textAlignment="center"

        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/large"
        android:textSize="18sp"
        android:textAlignment="center"

        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/normal"
        tools:text="johndoe@gmail.com"
        android:textSize="16sp"
        android:textAlignment="center"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/xx_large"
        />

</androidx.constraintlayout.widget.ConstraintLayout>